--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <h1>helllo world!</h1>
+    <h1>odin-recipes</h1>
     <a> href ="https://www.bing.com/ck/a?!&&p=9ec63cc278e7a13f1fcaefb4fc034b0e831d7acd73090409688f30328b050183JmltdHM9MTY1NDUzMDYxNiZpZ3VpZD00NWNhZGM4OC0wNWRiLTRlNTctYjg0YS00NTI1YmM2MmU2ZTQmaW5zaWQ9NTM4NQ&ptn=3&fclid=5c2697bf-e5b0-11ec-bcdb-b1e765bfa78f&u=a1aHR0cHM6Ly93d3cuZmFjZWJvb2suY29tL2luZGV4LnBocA&ntb= </www></a>
     <ul>
       <li>item 1</li>
@@ -18,7 +18,5 @@
     <ol>
       ITEM 1
     </ol>
-    <img
-    c:\Users\Zoom Computer\OneDrive\Desktop\programming\Screenshot 2022-06-05 at 22-09-41 DevDocs.png>
   </body>
 </html>
